--- a/website/default.twig
+++ b/website/default.twig
@@ -34,15 +34,22 @@
 
                 {% if menu is defined %}
                     <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
-                        <ul class="nav nav-pills flex-column">
-                            {% for itemId, item in menu.items %}
-                                <li class="nav-item">
-                                    <a href="{{ item.absoluteUrl|default(baseUrl ~ '/' ~ item.relativeUrl) }}" class="nav-link {{ itemId in currentFile|lower ? 'active' }}">
-                                        {{ item.text|raw }}
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
+                        {% for section in menu.sections %}
+                            {% if section.name %}
+                                <p class="text-muted">
+                                    {{ section.name }}
+                                </p>
+                            {% endif %}
+                            <ul class="nav nav-pills flex-column">
+                                {% for itemId, item in section.items %}
+                                    <li class="nav-item">
+                                        <a href="{{ item.absoluteUrl|default(baseUrl ~ '/' ~ item.relativeUrl) }}" class="nav-link {{ itemId in currentFile|split('/')|last|lower ? 'active' }}">
+                                            {{ item.text|raw }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% endfor %}
                     </nav>
                 {% endif %}
 
