chore: use npm for website dependencies

--- a/website/default.twig
+++ b/website/default.twig
@@ -6,9 +6,9 @@
 
         <title>{{ title }}</title>
 
-        <link rel="stylesheet" href="{{ baseUrl }}/vendor/bootswatch/dist/flatly/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/vendor/components-font-awesome/css/all.min.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/vendor/highlight/build/styles/dracula.min.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/vendor/flatly-bootstrap.min.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/vendor/font-awesome.min.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/vendor/highlight-dracula.min.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
     </head>
 
@@ -68,9 +68,9 @@
             </div>
         </footer>
 
-        <script src="{{ baseUrl }}/vendor/jquery/dist/js/jquery.min.js"></script>
-        <script src="{{ baseUrl }}/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="{{ baseUrl }}/vendor/highlight/build/highlight.min.js"></script>
+        <script src="{{ baseUrl }}/vendor/jquery.min.js"></script>
+        <script src="{{ baseUrl }}/vendor/bootstrap.min.js"></script>
+        <script src="{{ baseUrl }}/vendor/highlight.min.js"></script>
 
         <script>
             hljs.initHighlightingOnLoad();
